apps/external/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.15
  ports:
    - name: http
      port: 9696
      targetPort: 9696
