apps/external/prowlarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.joejad.com`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
